# headless

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic.py
examples/chatbot/: Pont.py  base.py  chatbot.py  plugin.py  security.py
examples/chatbot/plugins/: armory.py  discordbot.py  guild_log.py  shell.py
src/: setup.py
src/headless/: client.py  config.py  events.py  log.py
src/headless/auth/: __init__.py  checksum.py  session.py
src/headless/utility/: __init__.py  cache.py  construct.py  emitter.py  enum.py  history.py
src/headless/world/: addon.py  auction_house.py  character.py  errors.py  faction.py  group.py  handler.py  items.py  mail.py  names.py  player.py  position.py  registry.py  session.py  state.py
src/pont/: __init__.py  client.py  config.py  events.py
src/pont/auth/: checksum.py  session.py
src/pont/client/: __init__.py  client.py  config.py  events.py  log.py
src/pont/cryptography/: rc4.py  sha.py  srp.py
src/pont/utility/: __init__.py  construct.py  emitter.py  scoped_emitter.py
src/pont/world/: __init__.py  addon.py  character.py  errors.py  faction.py  handler.py  (+4 more)
tests/: test.py
tests/auth/: server.py  test_session.py
tests/client/: test_auth_protocol.py  test_cache.py  test_client.py  test_guid.py  test_world_auth_protocol.py
tests/cryptography/: test_srp.py
tests/mock/: emitter.py  realm.py  world.py
tests/utility/: test_cache.py  test_construct_extensions.py  test_emitter.py  test_history.py
tests/world/: server.py  test_chat.py  test_group.py  test_guild.py  test_session.py
(+261 files in other folders)
