[tool.poetry]
name = "headless"
version = "0.0.1"
description = ""
authors = ["Shaun Ostoic <ostoic@uwindsor.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
construct  = "^2" # MIT (I think)
trio  = "^0.19" # MIT
pyee = "^9.0" # MIT
cryptography  = "^36" # Apache
loguru = "^0.6" # MIT
trio-socks = { git = "https://github.com/Ostoic/trio-socks" }
wlink = { git = "git@github.com:Ostoic/wlink.git", branch = "0.0.2" }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-trio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
